# ericsql-tools

./: .gitignore  LICENSE  README.md
ci/ssh/: id_rsa  id_rsa.pub
env/dev/docker/: builddockerdev.sh
env/dev/docker/data/demo/: alisqldemo.cnf  initmysqldemo.sql  mariademo.cnf  mysql56demo.cnf  mysqldemo.cnf
env/dev/docker/data/demo/mgrdemo/: initmgrdemo-p.sql  initmgrdemo-s.sql  mgrdemo1.cnf  mgrdemo2.cnf  mgrdemo3.cnf  reinitmgrdemo-p.sql  reinitmgrdemo-s.sql
env/dev/docker/data/demo/rpldemo/: initrpldemo-p.sql  initrpldemo-s.sql  rpldemo1.cnf  rpldemo2.cnf
env/dev/docker/dockerfile/: .bash_profile  Dockerfile  bash_profile  bashrc  gitignore
env/dev/docker/dockerfile/os/init/: beforinit  changemysqlid.sh  init
test/ut/gdemo/: CMakeLists.txt  Readme.md
test/ut/gdemo/src/: sample1.cc
test/ut/gdemo/test/: gtest_demo.cc
