cmake_minimum_required(VERSION 2.8)
PROJECT(google-test-demo)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall")
find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(gdemo test/gtest_demo.cc)
target_link_libraries(gdemo ${GTEST_BOTH_LIBRARIES})
target_link_libraries(gdemo ${CMAKE_THREAD_LIBS_INIT})
add_test(Test gdemo)
enable_testing()